[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
edition = "2018"
homepage = "http://rapier.rs"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
name = "bevy_rapier2d"
readme = "README.md"
repository = "https://github.com/dimforge/bevy_rapier"
version = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim2"]

[features]
default = ["dim2", "render"]
dim2 = []
enhanced-determinism = ["rapier2d/enhanced-determinism"]
parallel = ["rapier2d/parallel"]
render = ["bevy/render"]
serde-serialize = ["rapier2d/serde-serialize"]
simd-nightly = ["rapier2d/simd-nightly"]
simd-stable = ["rapier2d/simd-stable"]
wasm-bindgen = ["rapier2d/wasm-bindgen"]

[dependencies]
bevy = { version = "0.6", default-features = false }
# bevy = {git = "https://github.com/nrot/bevy", branch = "main", default-features = false}
nalgebra = {version = "0.30.1", features = ["convert-glam020"]}
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier2d = {version = "0.12.0-alpha.0", default-features = false, features = ["dim2", "f32"]}

[dev-dependencies]
bevy = "0.6"
oorandom = "11"
