[package]
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
edition = "2018"
homepage = "http://rapier.rs"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
name = "bevy_rapier3d"
readme = "README.md"
repository = "https://github.com/dimforge/bevy_rapier"
version = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = ["dim3"]

[features]
default = ["dim3", "render"]
dim3 = []
enhanced-determinism = ["rapier3d/enhanced-determinism"]
parallel = ["rapier3d/parallel"]
render = ["bevy/render"]
serde-serialize = ["rapier3d/serde-serialize"]
simd-nightly = ["rapier3d/simd-nightly"]
simd-stable = ["rapier3d/simd-stable"]
wasm-bindgen = ["rapier3d/wasm-bindgen"]

[dependencies]
# bevy = { version = "0.6", default-features = false }
bevy = {git = "https://github.com/nrot/bevy", branch = "gltf-extras", default-features = false}
nalgebra = {version = "0.30.1", features = ["convert-glam020"]}
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier3d = {version = "^0.12.0-alpha.0", default-features = false, features = ["dim3", "f32"]}

[dev-dependencies]
#bevy_wgpu = "0.5"
#bevy_winit = { version = "0.5", features = [ "x11" ] }
